--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.9",
-        "laravel/framework": "^10.10",
+        "laravel/framework": "^10.14",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
+        "enlightn/enlightn": "^2.3",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
