--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jeroennoten/laravel-adminlte": "^3.9",
         "laravel/framework": "^10.14",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
         "enlightn/enlightn": "^2.3",
